--- a/projects.css
+++ b/projects.css
@@ -11,6 +11,7 @@ body{
     border-radius:50px;
     padding-bottom:70px;
     margin-bottom:20px;
+
 }
 
 .header {
@@ -21,24 +22,21 @@ body{
     text-align:center;
 }
 
-.project-container {
-    display: inline-block;
-    width: 45%;
-    background-color: #FBFEFF;
-    margin-left: 60px;
-    font-family: "Roboto Condensed";
-    border-radius:50px;
-    height: 700px;
-}
-
 .project-title {
     font-size: 30px;
     text-align: center;
     color: #435B71;
 }
 
+.project-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start; 
+  gap: 20px; 
+  margin: 20px 0; 
+}
 
-/* From Uiverse.io by akshat-patel28 */ 
 .card {
     display: flex;
     flex-direction: column;
@@ -54,6 +52,7 @@ body{
     box-sizing: border-box;
     padding: 10px;
     margin-left:60px;
+    flex: 1 1 calc(50% - 20px);
   }
   
   .card:hover {
@@ -96,8 +95,7 @@ body{
   .card-des {
     -webkit-box-orient: vertical;
     overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
+    display: -webkit-box; 
     line-clamp: 3;
     margin: 0;
     font-size: 20px;
@@ -106,4 +104,17 @@ body{
     color: #435B71;
     cursor: default;
   }
-  
+  .card-image {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+    border-radius: 10px; 
+  }
+
+  .skills-used {
+    font-family: "Montserrat";
+    text-align: center;
+    width: 100px;
+    background-color: #435B71;
+    border-radius: 10px;
+  }
