--- a/projects.css
+++ b/projects.css
@@ -1,3 +1,9 @@
+
+/* Colors: Blue
+e7f7fc
+435B71
+FFF8F8
+71436F*/
 body{
     margin:0;
     display:inline-block;
@@ -6,7 +12,7 @@ body{
 #projects {
     margin-left:20px;
     width: 98%;
-    background-color: #e7f7fc;
+    background-color: #FFF8F8;
     margin-left: 20px;
     border-radius:50px;
     padding-bottom:70px;
@@ -16,7 +22,7 @@ body{
 
 .header {
     font-family: "Roboto Condensed";
-    color:#435B71;
+    color:#71436F;
     padding-top:7%;
     font-size: 60px;
     text-align:center;
@@ -25,7 +31,7 @@ body{
 .project-title {
     font-size: 30px;
     text-align: center;
-    color: #435B71;
+    color: #FFF8F8;
 }
 
 .project-container {
@@ -83,7 +89,7 @@ body{
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-weight: 600;
-    color: #435B71;
+    color: #71436F;
     cursor: default;
     -webkit-box-orient: vertical;
     overflow: hidden;
@@ -101,7 +107,7 @@ body{
     font-size: 20px;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    color: #435B71;
+    color: #71436F;
     cursor: default;
   }
   .card-image {
@@ -115,6 +121,6 @@ body{
     font-family: "Montserrat";
     text-align: center;
     width: 100px;
-    background-color: #435B71;
+    background-color: #71436F;
     border-radius: 10px;
   }
