--- a/projects.css
+++ b/projects.css
@@ -23,7 +23,7 @@ body{
 .header {
     font-family: "Roboto Condensed";
     color:#71436F;
-    padding-top:7%;
+    padding-top:4%;
     font-size: 60px;
     text-align:center;
 }
@@ -57,7 +57,8 @@ body{
     cursor: pointer;
     box-sizing: border-box;
     padding: 10px;
-    margin-left:60px;
+    margin-left:30px;
+    margin-right: 30px;
     flex: 1 1 calc(50% - 20px);
   }
   
@@ -86,7 +87,7 @@ body{
   .card-title {
     margin: 0;
     font-size: 30px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    font-family: "Roboto Condensed", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-weight: 600;
     color: #71436F;
@@ -101,11 +102,9 @@ body{
   .card-des {
     -webkit-box-orient: vertical;
     overflow: hidden;
-    display: -webkit-box; 
-    line-clamp: 3;
     margin: 0;
-    font-size: 20px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    font-size: 18px;
+    font-family: "Montserrat", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     color: #71436F;
     cursor: default;
@@ -115,12 +114,4 @@ body{
     height: 100%; 
     object-fit: cover; 
     border-radius: 10px; 
-  }
-
-  .skills-used {
-    font-family: "Montserrat";
-    text-align: center;
-    width: 100px;
-    background-color: #71436F;
-    border-radius: 10px;
   }
